test_scenario/Authentication_policy/sso/httpbin-AuthorizationPolicy-user.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "httpbin-viewer"
spec:
  selector:
    matchLabels:
      app: httpbin
  rules:
  - to:
    - operation:
        methods: ["GET"]
        paths: ["/ip"]
    when:
    - key: request.auth.claims[preferred_username]
      values: ["test"]
